# magical-nest

./: .gitignore  local.db  main.py  pyproject.toml
app/core/: config.py
app/engine/: state_machine.py
mn_ai_voice/app/: main.py
mn_ai_voice/app/api/: calls.py  dependencies.py  schemas.py
mn_ai_voice/app/core/: config.py  constants.py
mn_ai_voice/app/db/: models.py  session.py
mn_ai_voice/app/engine/: extractors.py  kb_router.py  prompt_templates.py  qualification_rules.py  state_machine.py
mn_ai_voice/app/knowledge/: knowledge_base.yaml
mn_ai_voice/app/orchestrator/: call_orchestrator.py
mn_ai_voice/app/skills/: base.py  faq_skill.py  qualification_skill.py
mn_ai_voice/app/workers/: summarizer.py
mn_ai_voice/tests/: test_enums.py  test_faq_interrupts.py  test_models.py  test_qualification_rules.py  test_state_machine.py
